feat(): Made dstore async and seperated out methods.